# stater

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  build.sh  cleanup.sh  configure.ac
.github/workflows/: windows_linux_build.yml
examples/: float_test.state  int_test.state  pacman.state
lib/raylib/src/: .gitignore
src/: constants.h  main.c  utils.c  utils.h
